# tb

./: .gitignore  CMakeLists.txt  Dockerfile  aggregator.db  avatarka.py  avatarka2.py  channels.db  database.db  database.py  main.py  readme.md  requirements.txt  reset_survey.sh  session_1.session  start_test.sh  table_fill.py
.githab/workflows/: ci.yml
.github/: create-test-db.py
.github/workflows/: ci.yml
Backend/: aggregator.db  ai_search.py  auth.py  bot.py  database.py  database_connect.py  database_data.py  main.py  models.py  recommendation_engine.py  requirements.txt  table_fill.py
Backend/api/: admin.py  apps.py
Backend/media/: session_1.session
Backend/routers/: debug.py  projects.py  recommendations.py  synonyms.py  users.py
Backend/scripts/: database.py  database_data.py  migrate_recommendations.py  migrate_survey.py
Backend/telegram_aggregator/: settings.py
Backend/tg_aggregator/: entrypoint.sh  manage.py
Backend/tg_aggregator/aggregator_app/: custom_auth.py  models.py  serializers.py  urls.py  utils.py  views.py
Backend/tg_aggregator/tg_aggregator/: asgi.py  settings.py  urls.py  wsgi.py
Frontend/: index.html  index_old.html  vercel.json
Frontend/css/: styles.css
Frontend/js/: main.js  survey.js
include/: tg_bot.hpp
my-frontend/: package-lock.json  package.json
my-frontend/src/components/: App.jsx  Card.jsx  FixedButtons.jsx  Header.jsx  Loading.jsx  (+5 more)
other_bots/: readme.md
other_bots/include/: red_black_tree.hpp
other_bots/src/: database.py
src/: index.html  keyboards.py  main.py  mini_app.py  tg_bot.cpp  tg_bot.py
(+6 files in other folders)
